--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,26 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:400,700');
 
-:root,
-.font-body {
+#app {
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
-}
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6,
-.font-head {
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 700;
-}
+	h1, h2, h3, h4, h5, h6,
+	.h1, .h2, .h3, .h4, .h5, .h6 {
+		font-family: 'Montserrat', sans-serif;
+		font-weight: 700;
+		text-transform: uppercase;
+	}
 
-.bold { font-weight: 700; }
+	.bold { font-weight: 700; }
+}
